test/memory/allocation/errors/align3-error.chpl
use CTypes;

var ptr = allocate(uint(8), 100, alignment=3);
